tests/paczka1/fuzzy1/41810129.err
Error in line 6: rLmtxmKD S695 5,57
Error in line 5: rLmtxmKD S695 10,1
Error in line 17: YXV0jjY A620 75,8
Error in line 19: MhM S695 20,1
Error in line 21: A138 S695 69,0
Error in line 28: XmW48SK4r A988 77,3
